# ProyectoI.DatosII

./: .gitignore  CMakeLists.txt  Cliente.cpp  Cliente.h  ListaSimple.h  NodoSimple.h  SingletonMemory.cpp  SingletonMemory.h  checker.cpp  checker.h  interfazMain.cpp  main.cpp  parser.cpp  parser.h  parserChange.cpp  parserChange.h  prueba.cpp  prueba.h
